objects/Sales_PPP__c.object
<CustomObject>
    <fields>
        <fullName>Corresponding_Lead_Source_Providers__c</fullName>
        <label>Corresponding Lead Source Providers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cross_sell_at_shared_lot_locations__c</fullName>
        <label>Cross sell at shared lot locations</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_they_have_a_BDC__c</fullName>
        <label>Do you have a BDC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Function_as_single_or_multiple__c</fullName>
        <label>Function as single or multiple</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_track_marketing_effectiveness__c</fullName>
        <inlineHelpText>i.e. google analytics, CRM ROI</inlineHelpText>
        <label>How do you track marketing effectiveness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_does_the_BDC_operate__c</fullName>
        <inlineHelpText>i.e. Do sales people handle internet and phone leads, or the BDC?, Do you use round-robin or lead bucket? Central for all stores and service or independently?</inlineHelpText>
        <label>How does the BDC operate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_long_to_get_a_car_online__c</fullName>
        <label>How long to get a car online</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_F_I_accounts__c</fullName>
        <label>How many F&amp;I accounts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_cars_in_inventory_new_used__c</fullName>
        <label>How many cars in inventory (new/used)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_physical_addresses__c</fullName>
        <label>How many physical addresses</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_rooftops__c</fullName>
        <label>How many rooftops</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_sold_per_month_new_used__c</fullName>
        <label>How many sold per month (new/used)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Details__c</fullName>
        <label>Meeting Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales PPPs</relationshipLabel>
        <relationshipName>Sales_PPPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_staff_cross_sell__c</fullName>
        <label>Sales staff cross-sell</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_Conclusion__c</fullName>
        <label>Scenario Conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Single DMS, Single Lead Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single DMS, two or more locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple DMS, cross-selling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple DMS, cross-selling, shared lots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple CRMs with Filtering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scenario_Info__c</fullName>
        <formula>CASE(
   Scenario_Conclusion__c , 
   &quot;Single DMS, Single Lead Source&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001VSFF&quot;, &quot;Scenario1&quot;), 
   &quot;Single DMS, two or more locations&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001VSFK&quot;, &quot;Scenario2&quot;),
   &quot;Multiple DMS, cross-selling&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001VSFP&quot;, &quot;Scenario3&quot;),
   &quot;Multiple DMS, cross-selling, shared lots&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001VTZp&quot;, &quot;Scenario4&quot;),
   &quot;Multiple CRMs with Filtering&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000001VTbR&quot;, &quot;Scenario5&quot;),
   &quot;No Scenario Definition Present&quot;
)</formula>
        <label>Scenario Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Separate_Your_DMS_INV_by_Other_Means__c</fullName>
        <label>Separate Your DMS INV by Other Means</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Separate_Your_DMS_Sales_Data_by_Filter__c</fullName>
        <label>Separate Your DMS Sales Data by Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Should_we_set_up_a_meeting_with_them__c</fullName>
        <label>Should we set up a meeting with them</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Used_car_write_down_and_details__c</fullName>
        <label>Used car write down and details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_are_key_factors_for_decision_makers__c</fullName>
        <inlineHelpText>i.e. price, ease of use, buy-in</inlineHelpText>
        <label>What are key factors for decision makers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_did_you_like_best_about_our_demo__c</fullName>
        <inlineHelpText>i.e. I really liked your website, market pricing tool, desking, full integration throughout the product</inlineHelpText>
        <label>What did you like best about our demo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_spend_monthly_on_Marketin__c</fullName>
        <label>What is monthly spend on marketing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_do_you_spend_on_each_vendor__c</fullName>
        <inlineHelpText>i.e. product/vendor name &amp; monthly spend</inlineHelpText>
        <label>What do you spend on each vendor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_best_about_your_current_systems__c</fullName>
        <inlineHelpText>i.e. ease of use, customization</inlineHelpText>
        <label>What is best about your current systems</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_end_goal_in_a_new_system__c</fullName>
        <inlineHelpText>i.e. sell more cars, hold my sales people accountable, track my closing ratios, improve reporting</inlineHelpText>
        <label>What is your end goal in a new system</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_systems_do_you_currently_have__c</fullName>
        <inlineHelpText>i.e. Do you currently have a CRM or are you using a paper log? Identify current tools being utilized</inlineHelpText>
        <label>What systems do you currently have</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_types_of_after_sale_marketing__c</fullName>
        <inlineHelpText>i.e. direct mail, email campaigns, radio, newspaper</inlineHelpText>
        <label>What types of marketing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_would_you_change_about_your_current__c</fullName>
        <inlineHelpText>i.e. I want it fully integrated, I don’t want to have to have multiple log ins or vendors</inlineHelpText>
        <label>What would you change about your current</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Where_can_help_your_store_the_most__c</fullName>
        <inlineHelpText>i.e. driving or improving traffic, increasing internet sales, more effectively marketing to your customers, accountability</inlineHelpText>
        <label>Where can help your store the most</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_is_going_to_be_involved_in_decision__c</fullName>
        <inlineHelpText>i.e. dealer principles, GM’s, internet directors, committee</inlineHelpText>
        <label>Who is going to be involved in decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sales PPP</label>
    <nameField>
        <displayFormat>PPP-{00000000}</displayFormat>
        <label>Sales PPP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales PPPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>